# mnemocean

./: CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
.github/workflows/: build_and_test.yml  release.yml
include/mnemocean/: mnemocean.h
release_pack/: CMakeLists.txt  release.sh
tests/: CMakeLists.txt  test_custom.cpp  test_custom_token_generator.cpp  test_heroku.cpp  test_petname.cpp  vcpkg.json
